# academic-tracker-mcp

./: .gitignore  README.md  example.env  main.py  pyproject.toml
src/: browser.py  env.py  main.py  server.py  webscraping.py
